@@ -230,6 +230,7 @@ Fixes:
    * Fix elm_clock_first_interval_set writes wrong value.
    * Fix remained ecore timer issue when gesture layer was deleted.
    * Fix ctxpopup can't be called again in the mobile mode entry.
+   * Fix colorselector color change but when palette item is selected.
 
 Removals:
 
